client/mm: Tracking of CEX balances
Tracking of CEX balances for each bot is implemented in a similar fashion
to tracking bot balances on the DEX. A `wrappedCEX` is created for each
bot which behaves as if the entire balance of the CEX is the amount that
is allocated for each bot.

--- a/client/mm/sample-config.json
+++ b/client/mm/sample-config.json
@@ -8,8 +8,14 @@
             "quoteBalanceType": 0,
             "baseBalance": 100,
             "quoteBalance": 100,
+            "cexCfg": {
+                "name": "Binance",
+                "baseBalanceType": 0,
+                "quoteBalanceType": 0,
+                "baseBalance": 100,
+                "quoteBalance": 100
+            },
             "simpleArbConfig": {
-                "cexName": "Binance",
                 "profitTrigger": 0.01,
                 "maxActiveArbs": 5,
                 "numEpochsLeaveOpen": 5
